--- a/templates/slapd.conf.j2
+++ b/templates/slapd.conf.j2
@@ -2,6 +2,7 @@ include         /etc/openldap/schema/core.schema
 include         /etc/openldap/schema/cosine.schema
 include         /etc/openldap/schema/inetorgperson.schema
 include         /etc/openldap/schema/nis.schema
+include         /etc/openldap/schema/openssh-ldap.schema
 pidfile         /var/run/openldap/slapd.pid
 argsfile        /var/run/openldap/slapd.args
 modulepath      /usr/lib64/openldap
